# SERE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yml
SERE/: CMakeLists.txt  CustomImGuiWidgets.cpp  CustomImGuiWidgets.h  FontAtlas.cpp  FontAtlas.h  ImageAtlas.cpp  ImageAtlas.h  IntrinUtil.h  Mapping.cpp  Mapping.h  RenderFunctions.cpp  RenderFunctions.h  RenderManager.cpp  RenderManager.h  RuiNodeEditor.cpp  RuiNodeEditor.h  SERE.cpp  SERE.h  SERE.rc  SERE.vcxproj  SERE.vcxproj.filters  Settings.h  ShaderStructs.h  Util.h  cmake_install.cmake  defs.h  imgui_impl_dx11.cpp
SERE/Assets/Shader/: ui.ps  ui.vs
SERE/Imgui/: ImNodeFlow.cpp  ImNodeFlow.h  ImNodeFlow.inl  context_wrapper.h  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_stdlib.cpp
SERE/Nodes/: ArgumentNodes.cpp  ArgumentNodes.h  ConditionalNodes.cpp  ConditionalNodes.h  ConstantVarNodes.cpp  ConstantVarNodes.h  FunctionNodes.cpp  FunctionNodes.h  GlobalNodes.cpp  GlobalNodes.h  MathNodes.cpp  MathNodes.h  RenderJobNodes.cpp  RenderJobNodes.h  SplitMergeNodes.cpp  SplitMergeNodes.h  TransformNodes.cpp  TransformNodes.h
SERE/PakLoading/: asset.cpp  asset.h  cpakfile.cpp  cpakfile.h  patchapi.cpp  patchapi.h  texture.cpp  texture.h  utils.cpp  utils.h
SERE/RenderFrameworks/: RenderFramework.cpp  RenderFramework.h  RenderFramework_Dx11.cpp  RenderFramework_Dx11.h  RenderFramework_OGL3.cpp  RenderFramework_OGL3.h
SERE/RuiNodeEditor/: Mapping.cpp  Mapping.h  RuiBaseNode.cpp  RuiBaseNode.h  RuiBasePin.cpp  RuiBasePin.h  RuiExportPrototype.cpp  RuiExportPrototype.h  RuiNodeEditor.cpp  RuiNodeEditor.h  RuiNodeStyle.cpp  RuiNodeStyle.h  RuiVariables.h
SERE/RuiRendering/: RenderFunctions.cpp  RenderFunctions.h  RenderManager.cpp  RenderManager.h
examples/: leadwall_crosshair.json  lstar_crosshair.json
